--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,20 @@
-# Gradle
-.gradle/
-build/
-!gradle/wrapper/gradle-wrapper.jar
-
 # IDE
 .idea/
 *.iml
 *.ipr
 *.iws
 .vscode/
-bin/
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Minecraft
-run/
-logs/
+# Temporary files
+*.tmp
+*.bak
+*~
 
-# Java
-*.class
-*.log
-*.jar
-!gradle-wrapper.jar
+# Build artifacts
+.gradle/
+bin/
+build/
