Fix datapack command args and improve bot autonomy

--- a/plugin/AIminer/src/main/resources/config.yml
+++ b/plugin/AIminer/src/main/resources/config.yml
@@ -16,6 +16,8 @@ ai-server:
 vision:
   # Block scanning radius (blocks)
   scan-radius: 10
+  # Vertical scan range (blocks up/down)
+  vertical-range: 5
   
   # Vision update interval in seconds
   update-interval: 5
